# mem0-mcp

./: .env  .env.example  pyproject.toml
src/mem0_mcp_server/: __init__.py  __main__.py  schemas.py  server.py
