[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "mem0-mcp-server"
version = "0.3.0"
description = "MCP server exposing local Mem0 memory (no cloud, fully offline)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = [
    "mcp",
    "mem0",
    "memory",
    "agents",
    "local",
    "llm",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "mcp[cli]>=1.6.0",
    "mem0ai>=1.0.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.9.0",
]

[project.urls]
Repository = "https://github.com/aristath/mem0-mcp"

[project.scripts]
mem0-mcp-server = "mem0_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mem0_mcp_server"]

[tool.ruff]
target-version = "py310"
line-length = 100
